php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #69871 More short-circuiting failure
Submitted: 2015-06-18 12:46 UTC Modified: 2015-06-18 13:30 UTC
From: arjen at react dot com Assigned: bwoebi (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 7.0Git-2015-06-18 (Git) OS:
Private report: No CVE-ID: None
 [2015-06-18 12:46 UTC] arjen at react dot com
Description:
------------
Testscript also posted in https://bugs.php.net/bug.php?id=69868

Thought it would be the same issue, but after the two commits of laruence it's still present.

Test script:
---------------
--TEST--
Bug #xxxxx More short-circuiting failure
--FILE--
<?php

$a = true;

if(isset($a) && 0)
	var_dump(true);
else
	var_dump(false);

?>
--EXPECT--
bool(false)



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-06-18 13:30 UTC] bwoebi@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: bwoebi
 [2015-06-18 13:30 UTC] bwoebi@php.net
That's an unrelated failure, actually caused by ZEND_VM_SMART_BRANCH()... [aka code tries to be smarter than it actually is.]
 [2015-06-18 13:59 UTC] bwoebi@php.net
Automatic comment on behalf of bobwei9@hotmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=fae6bedea5e094a1f6ddbd1a4453eaea340d1855
Log: Fix bug #69871 (short-circuiting failure with smart_branch)
 [2015-06-18 13:59 UTC] bwoebi@php.net
-Status: Assigned +Status: Closed
 [2015-06-19 15:15 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=307c734bede2db829fa1f4dedc3a4d52a8e2381e
Log: Better way to fix (Fix bug #69871 (short-circuiting failure with smart_branch))
 [2015-06-19 15:15 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=235c7edb8b77981339895782e3ee2bac09e4a6e6
Log: Revert &quot;Fix bug #69871 (short-circuiting failure with smart_branch)&quot;
 [2015-06-23 18:04 UTC] ab@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=307c734bede2db829fa1f4dedc3a4d52a8e2381e
Log: Better way to fix (Fix bug #69871 (short-circuiting failure with smart_branch))
 [2015-06-23 18:04 UTC] ab@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=235c7edb8b77981339895782e3ee2bac09e4a6e6
Log: Revert &quot;Fix bug #69871 (short-circuiting failure with smart_branch)&quot;
 [2015-06-23 18:04 UTC] ab@php.net
Automatic comment on behalf of bobwei9@hotmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=fae6bedea5e094a1f6ddbd1a4453eaea340d1855
Log: Fix bug #69871 (short-circuiting failure with smart_branch)
 [2016-07-20 11:38 UTC] davey@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=307c734bede2db829fa1f4dedc3a4d52a8e2381e
Log: Better way to fix (Fix bug #69871 (short-circuiting failure with smart_branch))
 [2016-07-20 11:38 UTC] davey@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=235c7edb8b77981339895782e3ee2bac09e4a6e6
Log: Revert &quot;Fix bug #69871 (short-circuiting failure with smart_branch)&quot;
 [2016-07-20 11:38 UTC] davey@php.net
Automatic comment on behalf of bobwei9@hotmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=fae6bedea5e094a1f6ddbd1a4453eaea340d1855
Log: Fix bug #69871 (short-circuiting failure with smart_branch)
 
PHP Copyright © 2001-2025 The PHP Group
All rights reserved.
Last updated: Thu Jul 03 12:01:33 2025 UTC