Better way to fix (Fix bug #69871 (short-circuiting failure with smart_branch))